인쇄 기능 추가 오류 수정

--- a/RowingMachine-MVP/src/main/resources/templates/layouts/defaultLayout.html
+++ b/RowingMachine-MVP/src/main/resources/templates/layouts/defaultLayout.html
@@ -36,7 +36,7 @@
 		<!-- header -->
 		<header th:replace="fragments/header :: headerFragment"></header>
 		
-		<div class="my-5 py-5">
+		<div class="my-5 py-5 w-100">
 		
 			<!-- content -->
 			<div class="col-12 container-lg">
