--- a/RowingMachine-MVP/src/main/resources/templates/view/quiz/modal/loginModal.html
+++ b/RowingMachine-MVP/src/main/resources/templates/view/quiz/modal/loginModal.html
@@ -14,6 +14,7 @@
 						<label for="message-text" class="col-form-label d-grid">
 							<span>이메일을 입력하면 결과가 저장됩니다.</span>
 							<span>원치 않을 경우, 공란으로 입력하면, GUEST로 진행됩니다.</span>
+							<span>(safari 브라우저는 카카오 간편로그인이 지원되지 않습니다.)</span>
 						</label>
 						<input type="text" class="form-control" name="userId" id="userId">
 					</div>
