--- a/RowingMachine-MVP/src/main/resources/templates/view/quiz/sidebar/quizNav.html
+++ b/RowingMachine-MVP/src/main/resources/templates/view/quiz/sidebar/quizNav.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
 <div th:fragment="sidebarFragment">
-	<div class="border-primary border-start p-5" style="font-family: 'KOTRA_BOLD-Bold';">
+	<div class="p-5" style="font-family: 'KOTRA_BOLD-Bold';">
 		<th:block th:each=cnmmCd:${cnmmCdList}>
 			<div class="mb-5">
 				<div class="display-6">
