--- a/RowingMachine-MVP/src/main/resources/templates/fragments/rightSidebar.html
+++ b/RowingMachine-MVP/src/main/resources/templates/fragments/rightSidebar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
-<div th:fragment="sidebarFragment" class="border-primary border-start">
+<div th:fragment="sidebarFragment">
 	<div class="p-5" style="font-family: 'KOTRA_BOLD-Bold';">
 		<th:block th:each=cnmmCd:${cnmmCdList}>
 			<div class="mb-5">
