--- a/RowingMachine-MVP/src/main/resources/templates/layouts/sidebarLayout.html
+++ b/RowingMachine-MVP/src/main/resources/templates/layouts/sidebarLayout.html
@@ -36,12 +36,12 @@
 		<!-- header -->
 		<header th:replace="fragments/header :: headerFragment"></header>
 		
-		<div class="my-5 py-5 row w-100	">
+		<div class="my-5 py-5 row w-100">
 			<!-- sidebar -->
 			<div class="col-md"></div>
 		
 			<!-- content -->
-			<div class="col-md-7 container-lg">
+			<div class="col-md-6">
 				<div layout:fragment="content"></div>
 			</div>
 
