--- a/RowingMachine-MVP/src/main/resources/templates/view/quiz/result.html
+++ b/RowingMachine-MVP/src/main/resources/templates/view/quiz/result.html
@@ -5,16 +5,16 @@
 
 	<div layout:fragment="content" class="text-center">
 		<form action="" method="post" id="resultForm">
-			<input type="hidden" th:field="${quizMstrInfoVO.userId}"/>
+			<input type="hidden" name="userId" th:value="${param.userId}"/>
 		</form>
 		<div>
-			<div class="display-5 my-3" th:text="${userVO.userNm}" style="font-family: 'KOTRA_BOLD-Bold';"></div>
+			<div class="display-5 my-3" th:text="${param.userNm}" style="font-family: 'KOTRA_BOLD-Bold';"></div>
 			<span class="d-block display-1 text-primary" style="font-family: 'KOTRA_BOLD-Bold';">수고하셨습니다.</span>
 			<div class="display-5 text-primary my-3" style="font-family: 'GongGothicMedium';">
 				<span>(총 소요시간 : </span>
-				<span th:text="${quizMstrInfoVO.minSolving}"></span>
+				<span th:text="${param.minSolving}"></span>
 				<span>분</span>
-				<span th:text="${quizMstrInfoVO.secSolving}"></span>
+				<span th:text="${param.secSolving}"></span>
 				<span>초)</span>
 			</div>
 		</div>
