--- a/RowingMachine-MVP/src/main/resources/templates/view/quiz/resultQuizStastics.html
+++ b/RowingMachine-MVP/src/main/resources/templates/view/quiz/resultQuizStastics.html
@@ -29,9 +29,9 @@
 
 	<div class="d-flex justify-content-evenly align-items-center my-5 text-center btn-grp">
 	
-		<i class="far fa-check-circle fa-5x"
+		<i class="fas fa-check-circle fa-5x"
 			th:classappend="${quizMstrInfoVO.userAnswer} == 'O' ? active"></i>
-		<i class="far fa-times-circle fa-5x"
+		<i class="fas fa-times-circle fa-5x"
 			th:classappend="${quizMstrInfoVO.userAnswer} == 'X' ? active"></i>
 		
 	</div>
