--- a/RowingMachine-MVP/src/main/resources/templates/fragments/rightSidebar.html
+++ b/RowingMachine-MVP/src/main/resources/templates/fragments/rightSidebar.html
@@ -6,13 +6,13 @@
 		<th:block th:each=cnmmCd:${cnmmCdList}>
 			<div class="mb-5">
 				<div class="display-6">
-					<a href="#" th:text="${cnmmCd.cmmnDtlNm}"></a>
+					<a th:text="${cnmmCd.cmmnDtlNm}"></a>
 				</div>
 				<div class="row row-cols-auto quizNavDiv">
 					<th:block th:each="quiz : ${quizResultList}" th:if="${cnmmCd.cmmnDtlCd == quiz.subjectTypeCd}">
 						<div class="col fs-5" style="width:50px;"
 							th:classappend="${#strings.isEmpty(quiz.userAnswer)} ? '' : bg-secondary">
-							<a href="#" th:text="${#strings.length(quiz.srtNo) == 1 ? '0' + quiz.srtNo : quiz.srtNo}"
+							<a th:text="${#strings.length(quiz.srtNo) == 1 ? '0' + quiz.srtNo : quiz.srtNo}"
 								th:onclick="moveQuiz([[${quiz.subjectTypeCd}]], [[${quiz.srtNo}]])"></a>
 						</div>
 					</th:block>
