--- a/RowingMachine-MVP/src/main/resources/templates/view/quiz/main.html
+++ b/RowingMachine-MVP/src/main/resources/templates/view/quiz/main.html
@@ -56,15 +56,42 @@
 					</div>
 				</div>
 				
-				<div id="cmntrDiv" class="p-5 my-5 fs-5" style="display:none; border:solid 1px #dddddd;" th:utext="${quizMstrInfoVO.cmntr}"></div>
+				<div id="cmntrDiv" class="px-5 py-4 my-1 fs-5" style="display:none; border:solid 1px #dddddd;">
+					<button type="button" class="btn btn-primary my-3" onclick="toggleCmntr();">해설</button>
+					<div th:utext="${quizMstrInfoVO.cmntr}"></div>
+				</div>
 
-				<div class="d-flex justify-content-evenly align-items-center my-5 text-center btn-grp">
-					<i class="fas fa-angle-left fa-3x" onclick="goQuiz('prev');"></i>
-					<i class="far fa-check-circle fa-5x"
+				<div class="d-flex justify-content-between align-items-center my-5 text-center btn-grp">
+					<div>
+						<i class="fas fa-angle-left fa-3x" onclick="goQuiz('prev');"></i>
+					</div>
+					<div class="list-group w-100 mx-5">
+						<th:block th:each="dtlInfo:${quizMstrInfoVO.quizMstrDtlList}">
+							<div class="text-start my-3 exDiv">
+								<i class="fas fa-eraser" onclick="eraser(this);"></i>
+								<a class="list-group-item list-group-item-action"
+									th:classappend="${quizMstrInfoVO.userAnswer} == ${dtlInfo.quizMstrDtlSeq} ? list-group-item-dark"
+									onclick="chkAnswer(this);">
+									<span class="fw-bold mx-1" th:text="|${dtlInfo.srtNo}.|"></span>
+									<span class="exCntnt mx-1" th:text="${dtlInfo.content}"
+										th:classappend="${dtlInfo.eraseYn} == 'Y' ? text-decoration-line-through"></span>
+									<input type="hidden" class="quizMstrDtlSeq"
+										th:name="|quizMstrDtlList[${dtlInfoStat.index}].quizMstrDtlSeq|" th:value="${dtlInfo.quizMstrDtlSeq}"/>
+									<input type="hidden" class="eraseYn"
+										th:name="|quizMstrDtlList[${dtlInfoStat.index}].eraseYn|" th:value="${dtlInfo.eraseYn}"/>
+									<input type="hidden" th:name="|quizMstrDtlList[${dtlInfoStat.index}].quizUserAnsDtlSeq|"
+										th:value="${dtlInfo.quizUserAnsDtlSeq}" />
+								</a>
+							</div>
+						</th:block>
+					<!-- <i class="far fa-check-circle fa-5x"
 						th:classappend="${quizMstrInfoVO.userAnswer} == 'O' ? active" onclick="trigger(this, 'O')"></i>
 					<i class="far fa-times-circle fa-5x"
-						th:classappend="${quizMstrInfoVO.userAnswer} == 'X' ? active" onclick="trigger(this, 'X')"></i>
-					<i class="fas fa-angle-right fa-3x" onclick="goQuiz('next');"></i>
+						th:classappend="${quizMstrInfoVO.userAnswer} == 'X' ? active" onclick="trigger(this, 'X')"></i> -->
+					</div>
+					<div>
+						<i class="fas fa-angle-right fa-3x" onclick="goQuiz('next');"></i>
+					</div>
 				</div>
 				
 				<div class="row g-3 w-50 align-items-center" style="display:none">
