--- a/RowingMachine-MVP/src/main/resources/templates/view/quiz/admin/quizForm.html
+++ b/RowingMachine-MVP/src/main/resources/templates/view/quiz/admin/quizForm.html
@@ -4,106 +4,136 @@
 	layout:decorate="~{layouts/defaultLayout}">
 
 <head>
-    <title>quiz</title>
+	<title>quiz</title>
 </head>
 
 <div layout:fragment="content">
 
-
 	<div class="container">
-		<form action="" method="post" id="quizForm">
-			<input type="hidden" th:field="${userVO.userId}"/>
-			<input type="hidden" th:field="${userVO.userNm}"/>
-			<input type="hidden" th:field="${quizMstrInfoVO.secSolving}"/>
-			<input type="hidden" th:field="${quizMstrInfoVO.minSolving}"/>
-	
-			<div>
-				<div class="d-flex justify-content-between align-items-end">
-					<div>
-						<h1 class="text-center">ADMIN</h1>
+		<form action="" method="post" id="adminForm">
+			<input type="hidden" th:field="${quizMstrInfoVO.quizMstrInfoSeq}"/>
+
+			<div class="my-3 d-flex justify-content-between align-items-center">
+				<div class="row g-3 w-50 align-items-center">
+					<div class="col">
+						<select class="form-select form-select-lg fx-bold" name='subjectTypeCd'
+							onchange="selectQuiz();" id="subjectTypeCd">
+							<th:block th:each=cnmmCd:${cnmmCdList}>
+								<option th:value="${cnmmCd.cmmnDtlCd}" th:text="${cnmmCd.cmmnDtlNm}"
+									th:selected="${cnmmCd.cmmnDtlCd == quizMstrInfoVO.subjectTypeCd}"/>
+							</th:block>
+						</select>
 					</div>
-					<div class="m-1">
-						<i class="far fa-edit fa-3x"></i>
-						<i class="fas fa-edit fa-3x"></i>
-						<i class="fas fa-home fa-3x" onclick="goHome();"></i>
+					<div class="col" th:with="totalCnt=${quizMstrInfoVO.quizTotalCnt}">
+						<select class="form-select form-select-lg fx-bold" name='srtNo'
+							onchange="selectQuiz();" id="srtNo">
+							<option value=0>등록</option>
+							<th:block th:each="quizNo : ${quizNoList}" th:if="${quizNo.subjectTypeCd == quizMstrInfoVO.subjectTypeCd}">
+								<option th:value="${quizNo.srtNo}" th:text="${quizNo.rno}"
+									th:selected="${quizNo.srtNo == quizMstrInfoVO.srtNo}"/>
+							</th:block>
+						</select>
 					</div>
+				</div>
+				
+				<div class="m-1">
+					<i class="fas fa-home fa-3x" onclick="goHome();"></i>
 				</div>
 			</div>
 
-			<div class="d-flex flex-column justify-content-between my-5 border px-5 py-3" id="quizDiv">
+			<div class="d-flex flex-column justify-content-between border px-5 py-3">
 				<div>
-					<input type="hidden" th:field="${quizMstrInfoVO.quizMstrInfoSeq}"/>
-					<input type="hidden" th:field="${quizMstrInfoVO.quizUserAnsSeq}"/>
-					<input type="hidden" th:field="${quizMstrInfoVO.subjectTypeCd}"/>
-					<input type="hidden" th:field="${quizMstrInfoVO.srtNo}"/>
-					<input type="hidden" th:field="${quizMstrInfoVO.quizTotalCnt}"/>
-					<input type="hidden" th:field="${quizMstrInfoVO.userAnswer}"/>
-					
-					<div class="my-3 d-flex justify-content-between align-items-center">
-						<div class="fs-4 fw-bold " style="font-family: 'NEXON Lv1 Gothic OTF Bold';">
-							<span th:text="${quizMstrInfoVO.subjectTypeNm}"></span>
-							<span th:text="${#strings.length(quizMstrInfoVO.srtNo) == 1 ? '0' + quizMstrInfoVO.srtNo : quizMstrInfoVO.srtNo}"></span>
-						</div>
-						<div class="row g-3 w-50 align-items-center">
-							<div class="col">
-								<select class="form-select form-select-lg fx-bold" aria-label=".form-select-lg example"
-									onchange="selectQuiz();" id="subjectType">
-									<th:block th:each=cnmmCd:${cnmmCdList}>
-										<option th:value="${cnmmCd.cmmnDtlCd}" th:text="${cnmmCd.cmmnDtlNm}"
-											th:selected="${cnmmCd.cmmnDtlCd == quizMstrInfoVO.subjectTypeCd}"/>
-									</th:block>
-								</select>
-							</div>
-							<div class="col" th:with="totalCnt=${quizMstrInfoVO.quizTotalCnt}">
-								<select class="form-select form-select-lg fx-bold" aria-label=".form-select-lg example"
-									onchange="selectQuiz();" id="quizNo">
-									<th:block th:each="num : ${#numbers.sequence(1, totalCnt)}">
-										<option th:value="${num}" th:text="${num}"
-											th:selected="${num == quizMstrInfoVO.srtNo}"/>
-									</th:block>
-								</select>
-							</div>
-						</div>
-					</div>
-					
 					<div class="fs-5" style="min-height: 200px;">
-						<textarea class="w-100 px-3 py-2" style="height:300px" th:utext="${quizMstrInfoVO.content}"></textarea>
+						<h2 class="fs-4 fw-bold mx-1 fs-5" style="font-family: 'NEXON Lv1 Gothic OTF Bold';">문제</h2>
+						<textarea class="w-100 px-3 py-2" style="height:300px" name="content" th:utext="${quizMstrInfoVO.content}"></textarea>
 					</div>
-					
 					<div id="cmntrDiv" class="fs-5 my-3 py-3">
-						<span class="fs-4 fw-bold mx-1 fs-5" style="font-family: 'NEXON Lv1 Gothic OTF Bold';">해설</span>
-						<textarea class="w-100 px-3 py-2" style="height:300px" th:utext="${quizMstrInfoVO.cmntr}"></textarea>
+						<h2 class="fs-4 fw-bold mx-1 fs-5" style="font-family: 'NEXON Lv1 Gothic OTF Bold';">해설</h2>
+						<textarea class="w-100 px-3 py-2" style="height:300px" name="cmntr" th:utext="${quizMstrInfoVO.cmntr}"></textarea>
 					</div>
 				</div>
-
-				<div class="d-flex justify-content-between align-items-center text-center btn-grp">
-					<div class="list-group w-100 mx-5">
-						<th:block th:each="dtlInfo:${quizMstrInfoVO.quizMstrDtlList}">
-							<div class="text-start my-3 d-flex justify-content-between align-items-center">
-								<span class="fw-bold mx-1 fs-5" th:text="${dtlInfo.srtNo}"
-									style="font-family: 'NEXON Lv1 Gothic OTF Bold';"></span>
-								<textarea class="w-100 px-3 py-2 mx-4" style="height:110px" th:text="${dtlInfo.content}"></textarea>
-								<div>
-									<button type="button" class="btn btn-danger w-100 my-1">delete</button>
-									<button type="button" class="btn btn-success w-100 my-1">add</button>
-								</div>
-							</div>
-						</th:block>
+				<div>
+					<div class="text-start my-3 d-flex align-items-center">
+						<span class="fw-bold mx-1 fs-3" style="font-family: 'NEXON Lv1 Gothic OTF Bold';">&#9312;</span>
+						<input type="hidden" name="quizMstrDtlList[0].srtNo" value="1"/>
+						<textarea class="w-100 px-3 py-2 mx-4" style="height:110px"
+							name="quizMstrDtlList[0].content" th:text="${quizMstrInfoVO.quizMstrDtlList[0].content}"></textarea>
+						<input type="hidden" class="quizMstrDtlSeq" th:value="${quizMstrInfoVO.quizMstrDtlList[0].quizMstrDtlSeq}"
+							name="quizMstrDtlList[0].quizMstrDtlSeq" />
+					</div>
+					<div class="text-start my-3 d-flex align-items-center">
+						<span class="fw-bold mx-1 fs-3" style="font-family: 'NEXON Lv1 Gothic OTF Bold';">&#9313;</span>
+						<input type="hidden" name="quizMstrDtlList[1].srtNo" value="2"/>
+						<textarea class="w-100 px-3 py-2 mx-4" style="height:110px"
+							name="quizMstrDtlList[1].content" th:text="${quizMstrInfoVO.quizMstrDtlList[1].content}"></textarea>
+						<input type="hidden" class="quizMstrDtlSeq" th:value="${quizMstrInfoVO.quizMstrDtlList[1].quizMstrDtlSeq}"
+							name="quizMstrDtlList[1].quizMstrDtlSeq" />
+					</div>
+					<div class="text-start my-3 d-flex align-items-center">
+						<span class="fw-bold mx-1 fs-3" style="font-family: 'NEXON Lv1 Gothic OTF Bold';">&#9314;</span>
+						<input type="hidden" name="quizMstrDtlList[2].srtNo" value="3"/>
+						<textarea class="w-100 px-3 py-2 mx-4" style="height:110px"
+							name="quizMstrDtlList[2].content" th:text="${quizMstrInfoVO.quizMstrDtlList[2].content}"></textarea>
+						<input type="hidden" class="quizMstrDtlSeq" th:value="${quizMstrInfoVO.quizMstrDtlList[2].quizMstrDtlSeq}"
+							name="quizMstrDtlList[2].quizMstrDtlSeq" />
+					</div>
+					<div class="text-start my-3 d-flex align-items-center">
+						<span class="fw-bold mx-1 fs-3" style="font-family: 'NEXON Lv1 Gothic OTF Bold';">&#9315;</span>
+						<input type="hidden" name="quizMstrDtlList[3].srtNo" value="4"/>
+						<textarea class="w-100 px-3 py-2 mx-4" style="height:110px"
+							name="quizMstrDtlList[3].content" th:text="${quizMstrInfoVO.quizMstrDtlList[3].content}"></textarea>
+						<input type="hidden" class="quizMstrDtlSeq" th:value="${quizMstrInfoVO.quizMstrDtlList[3].quizMstrDtlSeq}"
+							name="quizMstrDtlList[3].quizMstrDtlSeq" />
+					</div>
+					<div class="text-start my-3 d-flex align-items-center">
+						<span class="fw-bold mx-1 fs-3" style="font-family: 'NEXON Lv1 Gothic OTF Bold';">&#9316;</span>
+						<input type="hidden" name="quizMstrDtlList[4].srtNo" value="5"/>
+						<textarea class="w-100 px-3 py-2 mx-4" style="height:110px"
+							name="quizMstrDtlList[4].content" th:text="${quizMstrInfoVO.quizMstrDtlList[4].content}"></textarea>
+						<input type="hidden" class="quizMstrDtlSeq" th:value="${quizMstrInfoVO.quizMstrDtlList[4].quizMstrDtlSeq}"
+							name="quizMstrDtlList[4].quizMstrDtlSeq" />
 					</div>
 				</div>
-				
-				<div id="cloneDiv" style="display:none;">
-					<div class="text-start my-3 d-flex justify-content-between align-items-center">
-						<span class="fw-bold mx-1 fs-5"
-							style="font-family: 'NEXON Lv1 Gothic OTF Bold';"></span>
-						<textarea class="w-100 px-3 py-2 mx-4" style="height:110px"></textarea>
-						<div>
-							<button type="button" class="btn btn-danger w-100 my-1">delete</button>
-							<button type="button" class="btn btn-success w-100 my-1">add</button>
-						</div>
+			</div>
+			
+			<div class="d-flex justify-content-between my-3">
+				<div class="input-group align-items-center">
+					<span class="input-group-text" id="inputGroup-sizing-default">정답</span>
+					<div class="form-check form-check-inline mx-3">
+						<input class="form-check-input" type="radio" name="answer" id="answer1" value="1"
+							th:checked="${quizMstrInfoVO.answer == '1'}">
+						<label class="form-check-label" for="answer1">1</label>
+					</div>
+					<div class="form-check form-check-inline mx-3">
+						<input class="form-check-input" type="radio" name="answer" id="answer2" value="2"
+							th:checked="${quizMstrInfoVO.answer == '2'}">
+						<label class="form-check-label" for="answer2">2</label>
+					</div>
+					<div class="form-check form-check-inline mx-3">
+						<input class="form-check-input" type="radio" name="answer" id="answer3" value="3"
+							th:checked="${quizMstrInfoVO.answer == '3'}">
+						<label class="form-check-label" for="answer3">3</label>
+					</div>
+					<div class="form-check form-check-inline mx-3">
+						<input class="form-check-input" type="radio" name="answer" id="answer4" value="4"
+							th:checked="${quizMstrInfoVO.answer == '4'}">
+						<label class="form-check-label" for="answer4">4</label>
+					</div>
+					<div class="form-check form-check-inline mx-3">
+						<input class="form-check-input" type="radio" name="answer" id="answer5" value="5"
+							th:checked="${quizMstrInfoVO.answer == '5'}">
+						<label class="form-check-label" for="answer5">5</label>
 					</div>
 				</div>
-				
+				<div class="w-50 d-flex gap-3">
+					<th:block th:if="${quizMstrInfoVO.quizMstrInfoSeq == 0}">
+						<button type="button" class="btn btn-lg btn-primary my-3 px-5 w-100 fw-bold" onclick="saveQuiz();">등록</button>
+					</th:block>
+					<th:block th:unless="${quizMstrInfoVO.quizMstrInfoSeq == 0}">
+						<button type="button" class="btn btn-lg btn-warning my-3 px-5 w-100 fw-bold" onclick="saveQuiz();">수정</button>
+						<button type="button" class="btn btn-lg btn-dark my-3 px-5 w-100 fw-bold" onclick="delQuiz();">삭제</button>
+					</th:block>
+				</div>
 			</div>
 		</form>
 	</div>
