--- a/RowingMachine-MVP/src/main/resources/templates/layouts/defaultLayout.html
+++ b/RowingMachine-MVP/src/main/resources/templates/layouts/defaultLayout.html
@@ -13,6 +13,9 @@
 	<!-- font awesome -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+	<!-- toast editor -->
+	<link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css" />
+
 	<!-- style -->
 	<link rel="shortcut icon" href="#">
 	<link rel="stylesheet" href="/css/common/style.css">
@@ -26,6 +29,9 @@
 	
 	<!-- chart.js -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.6.0/chart.min.js" integrity="sha512-GMGzUEevhWh8Tc/njS0bDpwgxdCJLQBWG3Z2Ct+JGOpVnEmjvNx6ts4v6A2XJf1HOrtOsfhv3hBKpK9kE5z8AQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+	<!-- toast editor -->
+	<script src="https://uicdn.toast.com/editor/latest/toastui-editor-all.min.js"></script>
 
 	<!-- 카카오 스크립트 -->
 	<script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
