--- a/RowingMachine-MVP/src/main/resources/templates/view/quiz/admin/quizForm.html
+++ b/RowingMachine-MVP/src/main/resources/templates/view/quiz/admin/quizForm.html
@@ -11,8 +11,6 @@
 
 	<div class="container">
 		<form action="" method="post" id="adminForm">
-			<input type="hidden" th:field="${quizMstrInfoVO.quizMstrInfoSeq}"/>
-
 			<div class="my-3 d-flex justify-content-between align-items-center">
 				<div class="row g-3 w-50 align-items-center">
 					<div class="col">
@@ -25,11 +23,11 @@
 						</select>
 					</div>
 					<div class="col" th:with="totalCnt=${quizMstrInfoVO.quizTotalCnt}">
-						<select class="form-select form-select-lg fx-bold" name='srtNo'
-							onchange="selectQuiz();" id="srtNo">
+						<select class="form-select form-select-lg fx-bold" name='quizMstrInfoSeq'
+							onchange="selectQuiz();" id="quizMstrInfoSeq">
 							<option value=0>등록</option>
 							<th:block th:each="quizNo : ${quizNoList}" th:if="${quizNo.subjectTypeCd == quizMstrInfoVO.subjectTypeCd}">
-								<option th:value="${quizNo.srtNo}" th:text="${quizNo.rno}"
+								<option th:value="${quizNo.quizMstrInfoSeq}" th:text="${quizNo.rno}"
 									th:selected="${quizNo.srtNo == quizMstrInfoVO.srtNo}"/>
 							</th:block>
 						</select>
@@ -37,19 +35,22 @@
 				</div>
 				
 				<div class="m-1">
-					<i class="fas fa-home fa-3x" onclick="goHome();"></i>
+					<i class="fas fa-home fa-3x" onclick="location.replace('/quiz/index.do');"></i>
 				</div>
 			</div>
 
 			<div class="d-flex flex-column justify-content-between border px-5 py-3">
 				<div>
+					
+					<div id="editor"></div>
+				
 					<div class="fs-5" style="min-height: 200px;">
 						<h2 class="fs-4 fw-bold mx-1 fs-5" style="font-family: 'NEXON Lv1 Gothic OTF Bold';">문제</h2>
-						<textarea class="w-100 px-3 py-2" style="height:300px" name="content" th:utext="${quizMstrInfoVO.content}"></textarea>
+						<textarea class="w-100 px-3 py-2" style="height:300px" name="content" th:text="${quizMstrInfoVO.content}"></textarea>
 					</div>
 					<div id="cmntrDiv" class="fs-5 my-3 py-3">
 						<h2 class="fs-4 fw-bold mx-1 fs-5" style="font-family: 'NEXON Lv1 Gothic OTF Bold';">해설</h2>
-						<textarea class="w-100 px-3 py-2" style="height:300px" name="cmntr" th:utext="${quizMstrInfoVO.cmntr}"></textarea>
+						<textarea class="w-100 px-3 py-2" style="height:300px" name="cmntr" th:text="${quizMstrInfoVO.cmntr}"></textarea>
 					</div>
 				</div>
 				<div>
@@ -130,7 +131,7 @@
 						<button type="button" class="btn btn-lg btn-primary my-3 px-5 w-100 fw-bold" onclick="saveQuiz();">등록</button>
 					</th:block>
 					<th:block th:unless="${quizMstrInfoVO.quizMstrInfoSeq == 0}">
-						<button type="button" class="btn btn-lg btn-warning my-3 px-5 w-100 fw-bold" onclick="saveQuiz();">수정</button>
+						<button type="button" class="btn btn-lg btn-warning my-3 px-5 w-100 fw-bold" onclick="editQuiz();">수정</button>
 						<button type="button" class="btn btn-lg btn-dark my-3 px-5 w-100 fw-bold" onclick="delQuiz();">삭제</button>
 					</th:block>
 				</div>
@@ -140,6 +141,14 @@
 </div>
 
 <th:block layout:fragment="script">
+	<script>
+		const Editor = toastui.Editor;
+		 
+		const editor = new Editor({
+			  el: document.querySelector('#editor'),
+			  height: '600px',
+			});
+	</script>
 	<script th:src="@{/js/quiz/quizFunc.js}"></script>
 </th:block>
 
