--- a/RowingMachine-MVP/src/main/resources/templates/view/quiz/main.html
+++ b/RowingMachine-MVP/src/main/resources/templates/view/quiz/main.html
@@ -44,7 +44,10 @@
 					<div class="my-3 d-flex justify-content-between align-items-center">
 						<div class="fs-4 fw-bold " style="font-family: 'NEXON Lv1 Gothic OTF Bold';">
 							<span th:text="${quizMstrInfoVO.subjectTypeNm}"></span>
-							<span th:text="${#strings.length(quizMstrInfoVO.srtNo) == 1 ? '0' + quizMstrInfoVO.srtNo : quizMstrInfoVO.srtNo}"></span>
+							<!-- <span th:text="${#strings.length(quizMstrInfoVO.srtNo) == 1 ? '0' + quizMstrInfoVO.srtNo : quizMstrInfoVO.srtNo}"></span> -->
+							<th:block th:each="quiz:${quizResultList}" th:if="${quiz.quizMstrInfoSeq == quizMstrInfoVO.quizMstrInfoSeq}">
+								<span th:text="${#strings.length(quiz.rno) == 1 ? '0' + quiz.rno : quiz.rno}"></span>
+							</th:block>
 						</div>
 						<div>
 							<button type="button" class="btn btn-primary mx-3" onclick="toggleCmntr();">해설</button>
@@ -111,9 +114,9 @@
 					<div class="col" th:with="totalCnt=${quizMstrInfoVO.quizTotalCnt}">
 						<select class="form-select form-select-lg fx-bold" aria-label=".form-select-lg example"
 							onchange="selectQuiz();" id="quizNo">
-							<th:block th:each="num : ${#numbers.sequence(1, totalCnt)}">
-								<option th:value="${num}" th:text="${num}"
-									th:selected="${num == quizMstrInfoVO.srtNo}"/>
+							<th:block th:each="quiz : ${quizResultList}" th:if="${quiz.subjectTypeCd == quizMstrInfoVO.subjectTypeCd}">
+								<option th:value="${quiz.srtNo}" th:text="${quiz.rno}"
+									th:selected="${quiz.srtNo == quizMstrInfoVO.srtNo}"/>
 							</th:block>
 						</select>
 					</div>
