--- a/RowingMachine-MVP/src/main/resources/templates/view/quiz/modal/lastPageModal.html
+++ b/RowingMachine-MVP/src/main/resources/templates/view/quiz/modal/lastPageModal.html
@@ -19,7 +19,7 @@
 				</div>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-primary" th:onclick="|quizAnsSave(${srtNo}, 'Y')|">Next</button>
+				<button type="button" class="btn btn-primary" th:onclick="|quizAnsSave(${quizMstrInfoSeq}, 'Y', 'Y')|">Next</button>
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
 			</div>
 		 </div>
